fix: show auth preferences on mobile

--- a/src/components/layout/auth-shell/auth-shell.module.scss
+++ b/src/components/layout/auth-shell/auth-shell.module.scss
@@ -47,6 +47,11 @@
   align-self: center;
 }
 
+.mobilePreferences {
+  align-self: flex-end;
+  margin-top: space(6);
+}
+
 .visual {
   display: none;
 }
@@ -78,6 +83,10 @@
   .content {
     height: 100%;
     min-height: 0;
+  }
+
+  .mobilePreferences {
+    display: none;
   }
 
   .visual {
